# blackmagic-esp32-c5

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
components/esp32-platform/: CMakeLists.txt  gdb-glue.c  idf_component.yml  platform.c  platform.h  rtt_if.c  rtt_if_esp32.h
components/m-string/: CMakeLists.txt  m-string.c  m-string.h
frontend/: .gitignore  README.md  build-dev.js  build.js  dev.html  package.json
frontend/src/: app.js  index.html  styles.css
main/: CMakeLists.txt  idf_component.yml  main.c  network-gdb.c  network-gdb.h  network-http.c  network-http.h  network-rtt.c  network-rtt.h  network.c  nvs-config.c  nvs-config.h  nvs.c  nvs.h
